objects/tfn_Galaxias_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Due_Date__c</fullName>
        <defaultValue>DATE(2019,10,31)</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Feedback_Details__c</fullName>
        <label>Feedback Details</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tfn_Feedback_Status__c</fullName>
        <label>Feedback Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Feedback_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback by:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Galaxias_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Future_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Solution__c</fullName>
        <label>Solution</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <label>Galaxias Feedback</label>
    <nameField>
        <displayFormat>GF{0000}</displayFormat>
        <label>Galaxias Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Galaxias Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>